# NCD.L1.sample--meme-museum

./: Cargo.toml  README.md  package-lock.json  package.json
contract/: package-lock.json  package.json
contract/src/: utils.ts
contract/src/meme/: contract.ts  models.ts
contract/src/museum/: contract.ts  models.ts
integration-tests/: package-lock.json
integration-tests/src/: main.ava.ts
meme/: Cargo.toml
meme/src/: lib.rs  model.rs
meme/tests/: meme_captures_votes.rs  meme_comments.rs  meme_donations.rs  meme_initialization.rs  meme_voting.rs
meme/tests/common/: mod.rs
museum/: Cargo.toml
museum/src/: lib.rs  models.rs
museum/tests/: museum_initialization.rs  museum_owner_methods.rs  museum_self_service_methods.rs
museum/tests/common/: mod.rs  setup_tests.rs
simulation/: Cargo.toml
simulation/src/: lib.rs  meme.rs  museum.rs
simulation2/: Cargo.toml
simulation2/src/: main.rs
src/meme/__tests__/: index.unit.spec.ts
src/meme/assembly/: index.ts
src/museum/__tests__/: index.unit.spec.ts
src/museum/assembly/: index.ts
utils/: Cargo.toml
utils/src/: lib.rs
