[package]
name = "museum"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
utils = { path = "../utils" }


# [build]
# target="wasm32-unknown-unknown"
# rustflags=["release"]


# [profile.release]
# codegen-units = 1
# # Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# overflow-checks = true
# target="wasm32-unknown-unknown"

