[package]
name = "simulation-near-academy-contracts"
version = "0.1.0"
authors = ["NEAR Inc <hello@near.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.2.0"
utils = { path = "../utils" }
meme = { path = "../meme" }
museum = { path = "../museum" }
